package Ejercicios.Clase2803.Ejercicio_Sueldo.Clases;

public class Gerente extends Empleado {
    
    public void setSueldo(){
        this.setNeto(1000.0);
    }
}
