@startuml

title ** Sueldo **

class Empleado{
    - nombre
    - apellido
    - legajo
    - categoria
    - diasAusentes
    - Sueldo
    
    + getNombre() : String
    + setNombre(String): void
    + getApellido() : String
    + setApellido(String) : void
    + getLegajo(): String
    + setLegajo(String): void
    + getCategoria() : String
    + setCategoria(String) : void
    + getDiasAusentes() : Integer 
    + setDiasAusentes(Integer) : void  
    
}

Empleado <|-- Gerente
Empleado <|-- Cadetes
Empleado <-- Sueldo

class Gerente{

}

class Cadetes{

}

class Sueldo{
    - neto

    + getNeto() : Double
    + setNeto(Double) : void
}

Class Presentismo{
    - bono 

    + getBono(): Integer
    + setBono(Integer): void
    + calcularPresentismo() : Double
}

class Resultados{
    - opcion

    + getOpcion(): Integer
    + setOpcion(Integer): void
    + calcularBonoXResultado(): Double
}

class CalculadorSueldo{
   
   + calcularSueldo(Empleado) : Double
}

Sueldo <-- CalculadorSueldo
Sueldo <-- Presentismo
Sueldo <-- Resultados

@enduml